--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -407,6 +407,27 @@
     </div>
 </div>
 
+    <div class="body11">
+      <div class="alignleft8">
+        <h4>The standard Lorem Ipsum passage</h4>
+        <br>
+        <br>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." </p>
+        <p>Led quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure. </p>
+        <p>Service wird bei uns Großgeschrieben! Alle Anfragen werden binnen 24H von uns beantwortet. </p>
+      </div>
+      <!--      <div class="alignleft">-->
+      <!--        <img src="assets/icons/handshake.png" width="100" height="100" class="hover-1">-->
+      <!--        <h3 class="hover-1">Entrümpelungen</h3>-->
+      <!--        <p>ANFRANGEN</p>-->
+      <!--      </div>-->
+      <!--      <div class="alignright2">-->
+      <!--        <img src="assets/icons/cube.png" width="100" height="100" class="hover-1">-->
+      <!--        <h3 class="hover-1">Zw</h3>-->
+      <!--        <p>ANFRANGEN</p>-->
+      <!--      </div>-->
+    </div>
+
 
 </div>
 </div>
