--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -409,13 +409,214 @@
 
     <div class="body11">
       <div class="alignleft8">
-        <h4>The standard Lorem Ipsum passage</h4>
-        <br>
-        <br>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." </p>
-        <p>Led quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure. </p>
-        <p>Service wird bei uns Großgeschrieben! Alle Anfragen werden binnen 24H von uns beantwortet. </p>
-      </div>
+        <div class="row">
+          <div class="alignleft7">
+            <div class="column">
+              <div class="container2">
+                <!--        <div class="alignright6">-->
+                <img src="assets/images/phone1.jpg" alt="Avatar" class="image2" style="width:143%">
+                <div class="overlay2">
+                  <div class="text4">CALL US</div>
+                </div>
+                <!--        </div>-->
+              </div>
+              <!--        <img src="assets/images/hand1.jpg" alt="Snow" style="width:100%">-->
+            </div>
+            <div class="column">
+              <div class="container2">
+                <!--        <div class="alignright6">-->
+                <img src="assets/images/build.jpg" alt="Avatar" class="image2" style="width:143%">
+                <div class="overlay2">
+                  <div class="text4">ADRESS</div>
+                </div>
+                <!--        </div>-->
+              </div>
+              <!--        <img src="assets/images/hand1.jpg" alt="Forest" style="width:100%">-->
+            </div>
+            <div class="column">
+              <div class="container2">
+                <!--        <div class="alignright6">-->
+                <!--          <img src="assets/images/hand3.jpg" alt="Avatar" class="image2" width="100" height="100">-->
+                <img src="assets/images/sun.jpg" alt="Mountains" class="image2" style="width:143%">
+                <div class="overlay2">
+                  <div class="text4">OPENING TIMES</div>
+                </div>
+                <!--        </div>-->
+              </div>
+              <!--        <img src="assets/images/hand1.jpg" alt="Mountains" style="width:100%">-->
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="column1">
+            <h5>
+              CALL US
+            </h5>
+            <br>
+            <p>
+              07956 576666
+              <br>
+              07956 576666
+            </p>
+          </div>
+          <div class="column1">
+            <h5>ADDRESS</h5>
+            <br>
+            <p>
+              8 Harley Street,
+              <br>
+              London,
+              <br>
+              W1G 9QY
+            </p>
+          </div>
+          <div class="column1">
+            <h5>OPENING
+              <br>TIMES  </h5>
+            <p>
+
+              Weekdays
+              <br>
+              9:00am - 9:00pm
+              <br>
+
+              Weekends
+              <br>
+              9:00am - 6:00pm
+<!--              9:00am - 9:00pm-->
+<!--              <br>-->
+<!--              Wednesday-->
+<!--              <br>-->
+<!--              9:00am - 9:00pm-->
+<!--              <br>-->
+<!--              Thursday-->
+<!--              <br>-->
+<!--              9:00am - 9:00pm-->
+<!--              <br>-->
+<!--              Friday-->
+<!--              <br>-->
+<!--              9:00am - 9:00pm-->
+<!--              <br>-->
+<!--              Saturday-->
+<!--              <br>-->
+<!--              9:00am - 6:00pm-->
+<!--              <br>-->
+<!--              Sunday-->
+<!--              <br>-->
+<!--              9:00am - 6:00pm</p>-->
+          </div>
+        </div>
+<!--        <div class="row">-->
+<!--&lt;!&ndash;          <div class="alignleft7">&ndash;&gt;-->
+<!--            <div class="column">-->
+<!--&lt;!&ndash;              <div class="container2">&ndash;&gt;-->
+<!--                &lt;!&ndash;        <div class="alignright6">&ndash;&gt;-->
+<!--&lt;!&ndash;                <img src="assets/images/hand1.jpg" alt="Avatar" class="image2" style="width:143%">&ndash;&gt;-->
+<!--&lt;!&ndash;                <div class="overlay2">&ndash;&gt;-->
+<!--&lt;!&ndash;                  <div class="text4">LIPSTICK</div>&ndash;&gt;-->
+<!--&lt;!&ndash;                </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                <div class="textcontainer">&ndash;&gt;-->
+<!--                  <br>-->
+<!--                  <br>-->
+<!--                  <h5>-->
+<!--                    CALL US-->
+<!--                  </h5>-->
+<!--                  <br>-->
+<!--                  <p>-->
+<!--                    07956 576666-->
+<!--                    <br>-->
+<!--                    07956 576666-->
+<!--                  </p>-->
+<!--&lt;!&ndash;                </div>&ndash;&gt;-->
+<!--                &lt;!&ndash;        </div>&ndash;&gt;-->
+<!--&lt;!&ndash;              </div>&ndash;&gt;-->
+<!--              &lt;!&ndash;        <img src="assets/images/hand1.jpg" alt="Snow" style="width:100%">&ndash;&gt;-->
+<!--            </div>-->
+<!--            <div class="column">-->
+<!--&lt;!&ndash;              <div class="container2">&ndash;&gt;-->
+<!--&lt;!&ndash;                &lt;!&ndash;        <div class="alignright6">&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;                <img src="assets/images/skincare1.jpg" alt="Avatar" class="image2" style="width:143%">&ndash;&gt;-->
+<!--&lt;!&ndash;                <div class="overlay2">&ndash;&gt;-->
+<!--&lt;!&ndash;                  <div class="text4">SKINCARE</div>&ndash;&gt;-->
+<!--&lt;!&ndash;                </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                &lt;!&ndash;        </div>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;              </div>&ndash;&gt;-->
+<!--            <div class="textcontainer">-->
+<!--              <br>-->
+<!--              <br>-->
+<!--              <h5>ADDRESS</h5>-->
+<!--              <p>-->
+<!--              8 Harley Street,-->
+<!--                <br>-->
+<!--                London,-->
+<!--                <br>-->
+<!--                W1G 9QY-->
+<!--              </p>-->
+<!--              <br>-->
+<!--              <p>-->
+<!--              Our London Harley-->
+<!--                <br>-->
+<!--                Street Clinic-->
+<!--              </p>-->
+<!--              <br>-->
+<!--              <br>-->
+<!--            </div>-->
+<!--              &lt;!&ndash;        <img src="assets/images/hand1.jpg" alt="Forest" style="width:100%">&ndash;&gt;-->
+<!--            </div>-->
+<!--            <div class="column">-->
+<!--              <div class="container2">-->
+<!--&lt;!&ndash;                <div class = "textcontainer">&ndash;&gt;-->
+<!--                &lt;!&ndash;        <div class="alignright6">&ndash;&gt;-->
+<!--                &lt;!&ndash;          <img src="assets/images/hand3.jpg" alt="Avatar" class="image2" width="100" height="100">&ndash;&gt;-->
+<!--&lt;!&ndash;                <img src="assets/images/skincare.jpg" alt="Mountains" class="image2" style="width:143%">&ndash;&gt;-->
+<!--                <br>-->
+<!--                <h5>OPENING-->
+<!--                  <br>TIMES  </h5>-->
+<!--                <p>-->
+<!--                  Monday-->
+<!--                  <br>-->
+<!--                  9:00am - 9:00pm-->
+<!--                  <br>-->
+<!--                  Tuesday-->
+<!--                  <br>-->
+<!--                  9:00am - 9:00pm-->
+<!--                  <br>-->
+<!--                  Wednesday-->
+<!--                  <br>-->
+<!--                  9:00am - 9:00pm-->
+<!--                  <br>-->
+<!--                  Thursday-->
+<!--                  <br>-->
+<!--                  9:00am - 9:00pm-->
+<!--                  <br>-->
+<!--                  Friday-->
+<!--                  <br>-->
+<!--                  9:00am - 9:00pm-->
+<!--                  <br>-->
+<!--                  Saturday-->
+<!--                  <br>-->
+<!--                  9:00am - 6:00pm-->
+<!--                  <br>-->
+<!--                  Sunday-->
+<!--                  <br>-->
+<!--                  9:00am - 6:00pm</p>-->
+<!--&lt;!&ndash;                </div>&ndash;&gt;-->
+<!--                <div class="overlay2">-->
+<!--                  <div class="text4">COSMETIC</div>-->
+<!--                </div>-->
+<!--                &lt;!&ndash;        </div>&ndash;&gt;-->
+<!--              </div>-->
+<!--              &lt;!&ndash;        <img src="assets/images/hand1.jpg" alt="Mountains" style="width:100%">&ndash;&gt;-->
+<!--            </div>-->
+<!--&lt;!&ndash;          </div>&ndash;&gt;-->
+<!--        </div>-->
+<!--        <h4>The standard Lorem Ipsum passage</h4>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." </p>-->
+<!--        <p>Led quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure. </p>-->
+<!--        <p>Service wird bei uns Großgeschrieben! Alle Anfragen werden binnen 24H von uns beantwortet. </p>-->
+<!--      </div>-->
       <!--      <div class="alignleft">-->
       <!--        <img src="assets/icons/handshake.png" width="100" height="100" class="hover-1">-->
       <!--        <h3 class="hover-1">Entrümpelungen</h3>-->
@@ -427,6 +628,7 @@
       <!--        <p>ANFRANGEN</p>-->
       <!--      </div>-->
     </div>
+
 
 
 </div>
