--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -309,6 +309,7 @@
   </div>
 
     <div class="body9">
+      <div class="naturalborder1">
       <div class="alignleft6">
       <h4>The standard Lorem Ipsum passage</h4>
       <br>
@@ -328,7 +329,7 @@
 <!--        <p>ANFRANGEN</p>-->
 <!--      </div>-->
     </div>
-
+    </div>
 <!--    <div class="body10">-->
 <!--      <div class="container2">-->
 <!--        <div class="alignright5">-->
@@ -631,6 +632,7 @@
 
 
 
+</div>
 </div>
 </div>
 </div>
