--- a/src/app/headersection/headersection.component.html
+++ b/src/app/headersection/headersection.component.html
@@ -3,7 +3,7 @@
 <!--  <a href="mailto:myemailaddress@gmail.com"> <img src="assets/icons/email.png"> </a>-->
   <div class="navcenter">
     <li><a routerLink="/start-component" routerLinkActive="active" ariaCurrentWhenActive="page">STARTSEITE</a></li>
-    <li><b><a routerLink="/home-component"  routerLinkActive="active" ariaCurrentWhenActive="page">ÜBER UNS</a></b></li>
+    <li><b><a routerLink="/uberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page">ÜBER UNS</a></b></li>
     <li><b><a routerLink="/referenzen-component"  routerLinkActive="active" ariaCurrentWhenActive="page">REFERENZEN</a></b></li>
     <li><b><a routerLink="/fithsection-component"  routerLinkActive="active" ariaCurrentWhenActive="page">LEISTUNGEN</a></b></li>
     <li><b><a routerLink="/secondsection-component"  routerLinkActive="active" ariaCurrentWhenActive="page">KONTAKFORMULAR</a></b></li>
