--- a/src/app/headersection/headersection.component.html
+++ b/src/app/headersection/headersection.component.html
@@ -5,7 +5,7 @@
     <li><a routerLink="/start-component" routerLinkActive="active" ariaCurrentWhenActive="page">STARTSEITE</a></li>
     <li><b><a routerLink="/uberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page">ÜBER UNS</a></b></li>
     <li><b><a routerLink="/referenzen-component"  routerLinkActive="active" ariaCurrentWhenActive="page">REFERENZEN</a></b></li>
-    <li><b><a routerLink="/fithsection-component"  routerLinkActive="active" ariaCurrentWhenActive="page">LEISTUNGEN</a></b></li>
+    <li><b><a routerLink="/leistungen-component"  routerLinkActive="active" ariaCurrentWhenActive="page">LEISTUNGEN</a></b></li>
     <li><b><a routerLink="/secondsection-component"  routerLinkActive="active" ariaCurrentWhenActive="page">KONTAKFORMULAR</a></b></li>
 </div>
 </div>
