--- a/src/app/referenzen/referenzen.component.html
+++ b/src/app/referenzen/referenzen.component.html
@@ -3,7 +3,7 @@
     <div class="alignleft">
       <div class="zoom">
       </div>
-      <img src="assets/images/ruj.png" width="400" height="600">
+      <img src="assets/images/ruj.png" max-width="400" max-height="600">
     </div>
     <div class="alignright">
       <h4>BABAS DIENSTLEISTUNGEN</h4>
