--- a/src/app/referenzen/referenzen.component.html
+++ b/src/app/referenzen/referenzen.component.html
@@ -1,9 +1,8 @@
-<div class="body2">
-  <div class="bodytext">
-    <div class="alignleft">
-      <div class="zoom">
-      </div>
-      <img src="assets/images/ruj.png" max-width="400" max-height="600">
+<br>
+<br>
+<br>
+<div class="alignleft">
+      <img src="assets/images/ruj.png" style="max-width:100%;height:auto;">
     </div>
     <div class="alignright">
       <h4>BABAS DIENSTLEISTUNGEN</h4>
@@ -11,6 +10,4 @@
       <p>Wir von der BABAS Dienstleistungen Berlin arbeiten nicht nur zügig, sondern sind auch sehr flexibel. Bereits nach unserem ersten Telefonat, vereinbaren wir einen Termin für Entrümpelung in Berlin mit Ihnen. Dabei spielt die Größe des Haushalts keine Rolle, denn unser Team von BABAS Dienstleistungen Berlin ist sehr erfahren und kann sich jeder Größe anpassen. Zudem kümmern wir uns nicht nur um die Haushaltsauflösung und um die Entsorgung, sondern auch darum, dass Sie die Schlüssel erst erhalten, wenn die Wohnung besenrein ist. Sie sind interessiert an einer professionellen Entrümpelung in Berlin? Gerne informieren wir Sie bei einem Telefonat über unsere Angebote.</p>
       <button class="button button5">MEHR ERFAHREN</button>
     </div>
-  </div>
-</div>
 
