--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -1,7 +1,7 @@
 <br>
 <br>
 <div class="backgroundcolor">
-  <div style="background-size: 1200px 600px;" [ngStyle]="{backgroundImage:'url(./assets/images/pure.jpeg)'}" >
+  <div style="background-size: 1200px 600px;" [ngStyle]="{backgroundImage:'url(./assets/images/pure.jpeg)'}"  >
     <br>
     <br>
     <br>
@@ -25,39 +25,39 @@
     <br>
     <br>
   </div>
-<div class="body2">
-  <div class="bodytext">
+<!--<div class="body2">-->
+<!--  <div class="bodytext">-->
     <div class="alignleft">
       <h2 class="colour1">THE HOME OF PERFECT LIPS.</h2>
       <h3 class="colour1">Entrümpelungen in Berlin und Brandenburg</h3>
       <div class="slide-left">
       <p>
-        Whether you are looking to add volume to thin lips, even out asymmetrical lips, plump your pout to
+        Whether you are looking to add volume to thin lips, even out asymmetrical lips, plump your
       </p>
         <p>
-        perfection or simply to enhance and define your cupid’s bow, then the London Lip Clinic in Harley
+        perfection or simply to enhance and define your cupid’s bow, then the London Lip Clinic
         </p>
         <p>
-        Street is the place to be seen (or not, should you prefer to opt for our ultra discrete at home
+        Street is the place to be seen (or not, should you prefer to opt for our ultra discrete
         </p>
         <p>
         VIP service).
       </p>
-      <p>  With a wealth of understanding and experience, Rupesh Shah has an unrivalled talent for creating
+      <p>  With a wealth of understanding and experience, Rupesh Shah has an unrivalled talent
         </p>
         <p>
-        impossibly beautiful lips using only non-surgical techniques. His artistry and meticulous attention
+        impossibly beautiful lips using only non-surgical techniques. His artistry and meticulous
         </p>
         <p>
-          to detail combined with use of the very best lip filler products makes Rupesh the master of
+          to detail combined with use of the very best lip filler products makes Rupesh the
         </p>
         <p>
           mouths!
       </p>
-      <p>  Transparenz ist für die BABAS Dienstleistungen oberstes Gebot. Wir bieten Ihnen für eine
+      <p>  Transparenz ist für die BABAS Dienstleistungen oberstes Gebot. Wir bieten Ihnen
       </p>
         <p>
-        Wohnungsauflösung in Berlin unkomplizierte und schnelle Lösungen. Als Kunden erwarten Sie von
+        Wohnungsauflösung in Berlin unkomplizierte und schnelle Lösungen. Als Kunden erwarten Sie
         </p>
         <p>
         uns als seriösem Dienstleister für die Wohnungsauflösung eine transparente Darstellung der
@@ -97,6 +97,9 @@
     </div>
   </div>
     <div class="centerbody">
+      <br>
+      <br>
+      <br>
       <h2 class="colour1">BIGGER ISN’T ALWAYS BETTER.</h2>
       <br>
       <img src="assets/images/woman.png" width="600" height="400">
@@ -344,6 +347,6 @@
         </div>
     </div>
 </div>
-</div>
-</div>
+<!--</div>-->
+<!--</div>-->
 </div>
