--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -27,7 +27,9 @@
   </div>
 <!--<div class="body2">-->
 <!--  <div class="bodytext">-->
-    <div class="alignleft">
+
+
+    <!--<div class="alignleft">
       <h2 class="colour1">THE HOME OF PERFECT LIPS.</h2>
       <h3 class="colour1">Entrümpelungen in Berlin und Brandenburg</h3>
       <div class="slide-left">
@@ -72,8 +74,10 @@
         auf die Quadratmeter der aufzulösenden Wohnung in Berlin an.
         </p>
       </div>
-    </div>
-    <div class="alignright">
+    </div>-->
+
+
+    <!--<div class="alignright">
       <div style="background-size: 500px 500px;" [ngStyle]="{backgroundImage:'url(./assets/images/happy.png)'}" >
         <br>
         <br>
@@ -95,7 +99,112 @@
         <br>
         <br>
     </div>
-  </div>
+  </div>-->
+
+  <!--deneme-->
+  <div class="responsive-two-columns">
+    <div>
+      <h2 class="colour1">THE HOMEE OF PERFECT LIPS.</h2>
+      <h3 class="colour1">Entrümpelungen in Berlin und Brandenburg</h3>
+      <div class="slide-left">
+        <p>
+          Whether you are looking to add volume to thin lips, even out asymmetrical lips, plump your
+        </p>
+        <p>
+          perfection or simply to enhance and define your cupid’s bow, then the London Lip Clinic
+        </p>
+        <p>
+          Street is the place to be seen (or not, should you prefer to opt for our ultra discrete
+        </p>
+        <p>
+          VIP service).
+        </p>
+        <p>  With a wealth of understanding and experience, Rupesh Shah has an unrivalled talent
+        </p>
+        <p>
+          impossibly beautiful lips using only non-surgical techniques. His artistry and meticulous
+        </p>
+        <p>
+          to detail combined with use of the very best lip filler products makes Rupesh the
+        </p>
+        <p>
+          mouths!
+        </p>
+        <p>  Transparenz ist für die BABAS Dienstleistungen oberstes Gebot. Wir bieten Ihnen
+        </p>
+        <p>
+          Wohnungsauflösung in Berlin unkomplizierte und schnelle Lösungen. Als Kunden erwarten Sie
+        </p>
+        <p>
+          uns als seriösem Dienstleister für die Wohnungsauflösung eine transparente Darstellung der
+        </p>
+        <p>
+          Preiskalkulation. So wissen Sie, was finanziell auf Sie zukommt. Wir berechnen einzelne
+        </p>
+        <p>
+          Positionen fair und basierend auf unseren Erfahrungswerten. Bei unserer Kalkulation kommt es
+        </p>
+        <p>
+          auf die Quadratmeter der aufzulösenden Wohnung in Berlin an.
+        </p>
+      </div>
+    </div>
+    <div>
+<!--      <div style="background-size: 500px 500px;" [ngStyle]="{backgroundImage:'url(./assets/images/happy.png)'}" >-->
+        <img src="assets/images/happy.png" width="600" height="600">
+<!--      <div>-->
+<!--        <h2 class="colour1">THE HOMEE OF PERFECT LIPS.</h2>-->
+<!--        <h3 class="colour1">Entrümpelungen in Berlin und Brandenburg</h3>-->
+<!--        <div class="slide-left">-->
+<!--          <p>-->
+<!--            Whether you are looking to add volume to thin lips, even out asymmetrical lips, plump your-->
+<!--          </p>-->
+<!--          <p>-->
+<!--            perfection or simply to enhance and define your cupid’s bow, then the London Lip Clinic-->
+<!--          </p>-->
+<!--          <p>-->
+<!--            Street is the place to be seen (or not, should you prefer to opt for our ultra discrete-->
+<!--          </p>-->
+<!--          <p>-->
+<!--            VIP service).-->
+<!--          </p>-->
+<!--          <p>  With a wealth of understanding and experience, Rupesh Shah has an unrivalled talent-->
+<!--          </p>-->
+<!--          <p>-->
+<!--            impossibly beautiful lips using only non-surgical techniques. His artistry and meticulous-->
+<!--          </p>-->
+<!--          <p>-->
+<!--            to detail combined with use of the very best lip filler products makes Rupesh the-->
+<!--          </p>-->
+<!--          <p>-->
+<!--            mouths!-->
+<!--          </p>-->
+<!--          <p>  Transparenz ist für die BABAS Dienstleistungen oberstes Gebot. Wir bieten Ihnen-->
+<!--          </p>-->
+<!--          <p>-->
+<!--            Wohnungsauflösung in Berlin unkomplizierte und schnelle Lösungen. Als Kunden erwarten Sie-->
+<!--          </p>-->
+<!--          <p>-->
+<!--            uns als seriösem Dienstleister für die Wohnungsauflösung eine transparente Darstellung der-->
+<!--          </p>-->
+<!--          <p>-->
+<!--            Preiskalkulation. So wissen Sie, was finanziell auf Sie zukommt. Wir berechnen einzelne-->
+<!--          </p>-->
+<!--          <p>-->
+<!--            Positionen fair und basierend auf unseren Erfahrungswerten. Bei unserer Kalkulation kommt es-->
+<!--          </p>-->
+<!--          <p>-->
+<!--            auf die Quadratmeter der aufzulösenden Wohnung in Berlin an.-->
+<!--          </p>-->
+<!--        </div>-->
+<!--      </div>-->
+      </div>
+    </div>
+<!--    <div class="responsive-two-columns">-->
+<!--      <div>1</div>-->
+<!--      <div>2</div>-->
+<!--    </div>-->
+
     <div class="centerbody">
       <br>
       <br>
@@ -144,13 +253,15 @@
     <div class="alignright2">
     </div>
   </div>
+
+
   <div class="body4">
     <div class="alignleft2">
       <img src="assets/images/female.png" width="600" height="400">
     </div>
     <div class="alignright3">
       <div class="bodytext2">
-        <h4 class="colour1">BABAS DIENSTLEISTUNGEN</h4>
+        <h4 class="colour1">DADAS DIENSTLEISTUNGEN</h4>
         <h2 class="colour1">EXPERTISE COUNTS FOR EVERYTHING.</h2>
         <div class="slide-left2">
         <p>
